# serializer version: 1
# name: test_entities[water_heater.second_water_heater_second_water_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 31.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'auto',
        'heat',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.second_water_heater_second_water_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tado',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 3>,
    'translation_key': None,
    'unique_id': '4 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[water_heater.second_water_heater_second_water_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Second Water Heater',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 31.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'auto',
        'heat',
        'off',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'heat',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 3>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 30.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.second_water_heater_second_water_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_entities[water_heater.water_heater_water_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 31.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'auto',
        'heat',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.water_heater_water_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tado',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 3>,
    'translation_key': None,
    'unique_id': '2 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[water_heater.water_heater_water_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Water Heater',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 31.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'auto',
        'heat',
        'off',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'auto',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 3>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 65.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.water_heater_water_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
